--- a/pet/src/main/resources/templates/mypage/sitterpage.html
+++ b/pet/src/main/resources/templates/mypage/sitterpage.html
@@ -1,211 +1,175 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!-- link -->
-    <script src="/js/link.js" defer></script>
-    <title>Document</title>
-    <!-- css -->
-    <link th:href="@{/css/style.css}" rel="stylesheet"/>
-    <link th:href="@{/css/header.css}" rel="stylesheet"/>
-    <link th:href="@{/css/footer.css}" rel="stylesheet"/>
-    <link th:href="@{/css/sitterpage.css}" rel="stylesheet"/>
-    <!-- JS -->
-    <script th:src="@{/js/sitterpage.js}" defer></script>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/temp}"
+>
+
+<!-- title -->
+<th:block layout:fragment="title">
+    sitterpage
+</th:block>
+
+<!-- css -->
+<th:block layout:fragment="css">
+    <link rel="stylesheet" href="/css/sitterpage.css">
+</th:block>
+
+<!-- js -->
+<th:block layout:fragment="script">
+    <script src="/js/sitterpage.js"></script>
     <!-- goole icon -->
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-</head>
+</th:block>
 
-<body>
-<div class="wrapper">
-    <!-- 헤더영역 (템플릿화 예정) -->
-
-    <div class="header">
-        <div class="logo">
-            <span><a href="#">LOGO</a></span>
-        </div>
-        <div class="menu">
+<!-- 작업 영역 -->
+<div class="content" layout:fragment="content">
+    <!-- chart1 -->
+    <div class="produce">
+        <div class="name">
+            <div class="dog1"><img th:src="@{/asset/sitter1.jpg}"/></div>
+            <span th:text="'반갑습니다,' + ${sitter.user.name} + '시터님'"></span>
             <ul>
-                <li class="menu-service">
-                    <a href="#">Service</a>
-                    <ul class="sub-menu">
-                        <li class="sub-item"><a href="#">Day Care</a></li>
-                        <li class="sub-item"><a href="#">Hotelling</a></li>
-                        <li class="sub-item"><a href="#">work with pet</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">place</a></li>
-                <li><a href="#">board</a></li>
+                <li>오늘도 반려동물에게 즐거운 하루를 선사해 주세요</li>
+                <!-- <span class="material-symbols-outlined"> favorite </span> -->
             </ul>
         </div>
-        <div class="sign">
-            <button class="sign-in btn">
-                <a href="../sign/login.html">로그인</a>
-            </button>
-            <button class="sign-up btn">
-                <a href="../sign/signup.html">회원가입</a>
-            </button>
+        <span class="material-symbols-outlined" style="font-size: 16px">star</span>
+        <div class="review">작성된 후기 : 2건</span></div>
+        <span class="material-symbols-outlined" style="font-size: 15px">calendar_today</span>
+        <div class="reserving">진행 중인 예약 : 6건</span></div>
+        <span class="material-symbols-outlined" style="font-size: 15px">credit_card</span>
+        <div class="payement-amount">이 달 금액 : 100,000원</span>
+        </div>
+        <div class="btn">
+            <div class="pro-setting"><a th:href="@{/mypage/sitterprofile}">프로필 관리</a></div>
+            <div class="pay-amount">
+                <!-- 모달 버튼 -->
+                <button class="modal-btn" data-type="pay">결제 내역</button>
+                </th:block>
+            </div>
         </div>
     </div>
-    <!-- 메인영역 -->
-    <div class="main">
-        <!-- pagew 1260px -->
-        <div class="pagew">
-            <!-- 작업 영역 -->
-            <div class="content">
-                <!-- chart1 -->
-                <div class="produce">
-                    <div class="name">
-                        <div class="dog1"><img th:src="@{/asset/sitter1.jpg}"/></div>
-                        <span th:text="'반갑습니다,' + ${sitter.user.name} + '시터님'"></span>
-                        <ul>
-                            <li>오늘도 반려동물에게 즐거운 하루를 선사해 주세요</li>
-                            <!-- <span class="material-symbols-outlined"> favorite </span> -->
-                        </ul>
-                    </div>
-                    <span class="material-symbols-outlined" style="font-size: 16px">star</span>
-                    <div class="review">작성된 후기 : 2건</span></div>
-                    <span class="material-symbols-outlined" style="font-size: 15px">calendar_today</span>
-                    <div class="reserving">진행 중인 예약 : 6건</span></div>
-                    <span class="material-symbols-outlined" style="font-size: 15px">credit_card</span>
-                    <div class="payement-amount">이 달 금액 : 100,000원</span>
-                    </div>
-                    <div class="btn">
-                        <div class="pro-setting"><a th:href="@{/mypage/sitterprofile}">프로필 관리</a></div>
-                        <div class="pay-amount">
-                            <!-- 모달 버튼 -->
-                            <button class="modal-btn" data-type="pay">결제 내역</button>
-                            </th:block>
-                        </div>
-                    </div>
-                </div>
-                <!-- chart2 -->
-                <div class="reserve">
-                    <div class="reserv">
-                        <span>진행중인 예약</span>
-                        <ul>
-                            <li>현재 진행 중이거나 예정된 예약 내역입니다.</li>
-                        </ul>
-                    </div>
-                    <div th:each="reserve:${reservations}" th:if="${reserve.sitter == sitter}" class="end-page" data-page="1">
-                        <div class="res-row">
-                            <div class="res-card">
-                                <ul>
-                                    <span class="reserveType" th:text="${reserve.serviceType}"></span>
-                                    <!--                                    <li class="type" th:text="${reserve.serviceType}"></li>-->
-                                    <!--                                    <li class="status" th:text="${reserve.status}"></li>-->
-                                </ul>
-                                <div class="schedule">
+    <!-- chart2 -->
+    <div class="reserve">
+        <div class="reserv">
+            <span>진행중인 예약</span>
+            <ul>
+                <li>현재 진행 중이거나 예정된 예약 내역입니다.</li>
+            </ul>
+        </div>
+        <div th:each="reserve:${reservations}" th:if="${reserve.sitter == sitter && reserve.status == '예약 확정'}"
+             class="end-page" data-page="1">
+            <div class="res-row">
+                <div class="res-card">
+                    <ul>
+                        <span class="reserveType" th:text="${reserve.serviceType}"></span>
+                        <!--                                    <li class="type" th:text="${reserve.serviceType}"></li>-->
+                        <!--                                    <li class="status" th:text="${reserve.status}"></li>-->
+                    </ul>
+                    <div class="schedule">
                                     <span class="material-symbols-outlined"
                                           style="font-size: 15px">calendar_today</span>
-                                    <div class="schedule" th:text="${reserve.date}"></div>
-                                </div>
-                                <div class="pet"><img th:src="@{/asset/cat.jpg}" alt="반려동물 이미지"></div>
-                                <div class="na" th:each="pet : ${pet}" th:text="'이름 : ' + ${pet.petName}"></div>
-                                <div class="price">케어비용 : 50,000원</div>
-                                <div class="noti" th:text="'요청사항 : ' + ${reserve.request}"></div>
-                                <div class="actions">
-                                    <button class="openChatBtn">채팅</button>
-                                    <button class="modal-btn" data-type="view1">상세보기</button>
-                                </div>
-                            </div>
-                        </div>
-                        <!--페이지네이션-->
-                        <div class="allres">
-                            <button th:if="${currentPage > 0}"
-                                    th:onclick="location.href=\'items?page=' + ${currentPage -1} + '\'">
-                                <span class="left material-symbols-outlined">chevron_left</span>
-                            </button>
-                            <ul class="number">
-                                <div th:each="pageNum : ${#numbers.sequence(0, totalPages != null ? totalPages - 1 : 0)}">
-                                    <button class="page-btn" th:text="${pageNum + 1}"
-                                            th:classappend="${pageNum == currentPage ? 'active' : ''}"
-                                            th:onclick="location.href='items?page=' + ${pageNum}"></button>
-                                </div>
-                            </ul>
-                            <button th:if="${totalPages != null and currentPage < totalPages -1}"
-                                    th:onclick="location.href=\'items?page=' + ${currentPage +1} + '\'">
-                                <span class="right material-symbols-outlined">chevron_right</span>
-                            </button>
-                        </div>
+                        <div class="schedule" th:text="${reserve.date}"></div>
                     </div>
-                </div>
-                <!-- chart3 -->
-                <div class="resend">
-                    <div class="end">
-                        <span>예약완료</span>
-                        <ul>
-                            <li>LEE 시터님의 완료된 예약 내역입니다.</li>
-                        </ul>
-                    </div>
-                    <div th:each="reserve:${reservations}" class="res-page" data-page="1">
-                        <div class="end-res">
-                            <div class="pet1"><img th:src="@{/asset/dog2.jpg}" alt="반려동물"/></div>
-                            <div class="en" th:each="pet : ${pet}" th:text="'이름 : ' + ${pet.petName}"></div>
-                            <div class="ed" th:text="'기간 : ' + ${reserve.date}"></div>
-                            <div class="es" th:text="'이용한 서비스 : ' + ${reserve.serviceType}"></div>
-                            <div class="char">
-                                <button class="modal-btn" data-type="view5">후기</button>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- 페이지네이션 -->
-                    <div class="res-pagination-container">
-                        <button th:if="${currentPage > 0}"
-                                th:onclick="location.href=\'items?page=' + ${currentPage -1} + '\'">
-                            <span class="left">&lt;</span>
-                        </button>
-                        <ul class="number">
-                            <div th:each="pageNum : ${#numbers.sequence(0, totalPages != null ? totalPages - 1 : 0)}">
-                                <button class="page-btn" th:text="${pageNum + 1}"
-                                        th:classappend="${pageNum == currentPage ? 'active' : ''}"
-                                        th:onclick="location.href='items?page=' + ${pageNum}"></button>
-                            </div>
-                        </ul>
-
-                        <button th:if="${totalPages != null and currentPage < totalPages -1}"
-                                th:onclick="location.href=\'items?page=' + ${currentPage +1} + '\'">
-                            <span class="right">&gt;</span>
-                        </button>
-                    </div>
-                </div>
-                <!-- 기본 모달 -->
-                <div id="myModal" class="modal">
-                    <div class="modal-content">
-                        <span class="close" id="closeBtn">&times;</span>
-                        <div id="modalContentBody">
-                            <p>기본 모달 내용</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- 채팅 모달 -->
-                <div id="chatModal" class="chat-modal">
-                    <div class="chat-box">
-                        <div class="chat-header">
-                            <span id="chatWith">채팅</span>
-                            <span id="closeChatBtn" class="close">&times;</span>
-                        </div>
-                        <div class="chat-messages" id="chatMessages"></div>
-                        <div class="chat-input">
-                            <input
-                                    type="text"
-                                    id="chatInput"
-                                    placeholder="메시지를 입력하세요"
-                            />
-                            <button id="sendBtn">전송</button>
-                        </div>
+                    <div class="pet"><img th:src="@{/asset/cat.jpg}" alt="반려동물 이미지"></div>
+                    <div class="na" th:each="pet : ${pet}" th:text="'이름 : ' + ${pet.petName}"></div>
+                    <div class="price">케어비용 : 50,000원</div>
+                    <div class="noti" th:text="'요청사항 : ' + ${reserve.request}"></div>
+                    <div class="actions">
+                        <button class="openChatBtn">채팅</button>
+                        <button class="modal-btn" data-type="view1">상세보기</button>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- footer영역(템플릿화 예정) -->
-        <div class="footer">
-            <span>footer</span>
+            <!--페이지네이션-->
+            <div class="allres">
+                <button th:if="${currentPage > 0}"
+                        th:onclick="location.href=\'items?page=' + ${currentPage -1} + '\'">
+                    <span class="left material-symbols-outlined">chevron_left</span>
+                </button>
+                <ul class="number">
+                    <div th:each="pageNum : ${#numbers.sequence(0, totalPages != null ? totalPages - 1 : 0)}">
+                        <button class="page-btn" th:text="${pageNum + 1}"
+                                th:classappend="${pageNum == currentPage ? 'active' : ''}"
+                                th:onclick="location.href='items?page=' + ${pageNum}"></button>
+                    </div>
+                </ul>
+                <button th:if="${totalPages != null and currentPage < totalPages -1}"
+                        th:onclick="location.href=\'items?page=' + ${currentPage +1} + '\'">
+                    <span class="right material-symbols-outlined">chevron_right</span>
+                </button>
+            </div>
         </div>
     </div>
-</body>
+    <!-- chart3 -->
+    <div class="resend">
+        <div class="end">
+            <span>예약완료</span>
+            <ul>
+                <li>LEE 시터님의 완료된 예약 내역입니다.</li>
+            </ul>
+        </div>
+        <div th:each="reserve:${reservations}" th:if="${reserve.status == '완료'}" class="res-page" data-page="1">
+            <div class="end-res">
+                <div class="pet1"><img th:src="@{/asset/dog2.jpg}" alt="반려동물"/></div>
+                <div class="en" th:each="pet : ${pet}" th:text="'이름 : ' + ${pet.petName}"></div>
+                <div class="ed" th:text="'기간 : ' + ${reserve.date}"></div>
+                <div class="es" th:text="'이용한 서비스 : ' + ${reserve.serviceType}"></div>
+                <div class="char">
+                    <button class="modal-btn" data-type="view5">후기</button>
+                </div>
+            </div>
+        </div>
+        <!-- 페이지네이션 -->
+        <div class="res-pagination-container">
+            <button th:if="${currentPage > 0}"
+                    th:onclick="location.href=\'items?page=' + ${currentPage -1} + '\'">
+                <span class="left">&lt;</span>
+            </button>
+            <ul class="number">
+                <div th:each="pageNum : ${#numbers.sequence(0, totalPages != null ? totalPages - 1 : 0)}">
+                    <button class="page-btn" th:text="${pageNum + 1}"
+                            th:classappend="${pageNum == currentPage ? 'active' : ''}"
+                            th:onclick="location.href='items?page=' + ${pageNum}"></button>
+                </div>
+            </ul>
+
+            <button th:if="${totalPages != null and currentPage < totalPages -1}"
+                    th:onclick="location.href=\'items?page=' + ${currentPage +1} + '\'">
+                <span class="right">&gt;</span>
+            </button>
+        </div>
+    </div>
+    <!-- 기본 모달 -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeBtn">&times;</span>
+            <div id="modalContentBody">
+                <p>기본 모달 내용</p>
+            </div>
+        </div>
+    </div>
+    <!-- 채팅 모달 -->
+    <div id="chatModal" class="chat-modal">
+        <div class="chat-box">
+            <div class="chat-header">
+                <span id="chatWith">채팅</span>
+                <span id="closeChatBtn" class="close">&times;</span>
+            </div>
+            <div class="chat-messages" id="chatMessages"></div>
+            <div class="chat-input">
+                <input
+                        type="text"
+                        id="chatInput"
+                        placeholder="메시지를 입력하세요"
+                />
+                <button id="sendBtn">전송</button>
+            </div>
+        </div>
+    </div>
+</div>
 </html>
